--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,5 +69,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //by me for firestore
     implementation platform('com.google.firebase:firebase-bom:32.1.1')
 }
