--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   provider: ^6.0.5
   assets_audio_player: ^3.0.6
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
